--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="navbar">
                 <li><a href="index.html">Início</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre mim</a></li>
                 <li><a href="projetos.html">Projetos</a></li>
             </ul>
         </nav>
@@ -24,7 +24,6 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Davila - Todos os direitos reservados.</p>
     </footer>
     <script src="codigo.js"></script>
 </body>
