--- a/projetos.html
+++ b/projetos.html
@@ -20,14 +20,14 @@
         <section class="projects">
             <h1>Meus Projetos</h1>
             <ul align="left">
-                <li>Projeto 1: Artefato com Arduino</li>
+                <li>Projeto 1: La Ursa walk</li>
                 <li>Projeto 2: Jogo estilo The Legend of Zelda na Unity</li>
-                <li>Projeto 3: Aplicativo de geração de RFID</li>
+                <li>Projeto 3: Gerenciador de corrida e competição</li>
             </ul>
+            <p>Sobre o projeto 1 </p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Davila - Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
