--- a/sobre.html
+++ b/sobre.html
@@ -18,13 +18,16 @@
     </header>
     <main>
         <section class="about">
-            <h1>Sobre Mim</h1>
-            <p>Sou um apaixonado por programação, com interesse em CyberSecurity e IA.</p>
-            <p>Atualmente estudando Ciências da Computação na CESAR School</p>
+            <h1 align="left">Sobre Mim</h1>
+            <p align="left">Meu nome é Davila, sou Tecnico em Desenvolvimento de Sistemas e estudante da <a href="https://www.cesar.school/">CESAR School</a>, antes de fazer o ensino tecnico eu queriao curso de engenharia mecatronica, mas como não tinha perto de onde eu morava acabei fazendo Desenvolvimento de Sistemas e simplismente me apaixonei pela area</p>
+            <ul align="left">
+                <h1>Interesses</h1>
+                <li>Inteligencia Artificial</li>
+                <li>CyberSecurity</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Davila - Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
