--- a/projetos.html
+++ b/projetos.html
@@ -17,15 +17,15 @@
         </nav>
     </header>
     <main>
-        <section class="projects">
+        <section class="hero">
             <h1>Meus Projetos</h1>
-            <ul align="left">
+            <ul>
                 <li>1 Projeto: La Ursa walk</li>
                 <li>2 Projeto: Jogo estilo The Legend of Zelda na Unity</li>
                 <li>3 Projeto: Gerenciador de corrida e competição</li>
             </ul>
-            <h1 align="left">Sobre o projeto 1 </h1>
-            <p align="left">Foi realizado para a disciplina Projeto 1 da CESAR School e que o projeto do meu grupo basicamente consiste em varios artefatos espalhados pelo recife antigo que vai contar a historia do local, com o objetivo de aumentar o interesse na cultura local e o interessem atividade fisica, como o proprio nome diz utilizaremos ma La Ursa</p>
+            <h2>Sobre o projeto 1 </h2>
+            <p>Foi realizado para a disciplina Projeto 1 da CESAR School e que o projeto do meu grupo basicamente consiste em varios artefatos espalhados pelo recife antigo que vai contar a historia do local, com o objetivo de aumentar o interesse na cultura local e o interessem atividade fisica, como o proprio nome diz utilizaremos ma La Ursa</p>
         </section>
     </main>
     <footer>
