--- a/sobre.html
+++ b/sobre.html
@@ -17,11 +17,11 @@
         </nav>
     </header>
     <main>
-        <section class="about">
-            <h1 align="left">Sobre Mim</h1>
-            <p align="left">Meu nome é Davila, sou Tecnico em Desenvolvimento de Sistemas e estudante da <a href="https://www.cesar.school/">CESAR School</a>, antes de fazer o ensino tecnico eu queriao curso de engenharia mecatronica, mas como não tinha perto de onde eu morava acabei fazendo Desenvolvimento de Sistemas e simplismente me apaixonei pela area</p>
-            <ul align="left">
-                <h1>Interesses</h1>
+        <section class="hero">
+            <h2>Sobre Mim</h2>
+            <p>Meu nome é Davila, sou Tecnico em Desenvolvimento de Sistemas e estudante da <a href="https://www.cesar.school/">CESAR School</a>, antes de fazer o ensino tecnico eu queriao curso de engenharia mecatronica, mas como não tinha perto de onde eu morava acabei fazendo Desenvolvimento de Sistemas e simplismente me apaixonei pela area</p>
+            <h2>Interesses</h2>
+            <ul>
                 <li>Inteligencia Artificial</li>
                 <li>CyberSecurity</li>
             </ul>
