--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             <h1>Bem-vindo</h1>
             <p>Estudante de Ciências da Computação e desenvolvedor em busca de oportunidades!</p>
         </section>
+        <button id="mapa">Mostrar Mapa</button>
+<div id="map" style="height: 500px; width: 100%; display: none;"></div>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="codigo.js"></script>
+
     </main>
     <footer>
+        <p>&copy; 2024 Davila - Todos os direitos reservados.</p>
     </footer>
     <script src="codigo.js"></script>
 </body>
