--- a/sobre.html
+++ b/sobre.html
@@ -28,6 +28,7 @@
         </section>
     </main>
     <footer>
+        <p>&copy; 2024 Davila - Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
