--- a/projetos.html
+++ b/projetos.html
@@ -29,6 +29,7 @@
         </section>
     </main>
     <footer>
+        <p>&copy; 2024 Davila - Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
