--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="navbar">
                 <li><a href="index.html">Início</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre mim</a></li>
                 <li><a href="projetos.html">Projetos</a></li>
             </ul>
         </nav>
