--- a/projetos.html
+++ b/projetos.html
@@ -20,12 +20,12 @@
         <section class="hero">
             <h1>Meus Projetos</h1>
             <ul>
-                <li>1 Projeto: La Ursa walk</li>
-                <li>2 Projeto: Jogo estilo The Legend of Zelda na Unity</li>
-                <li>3 Projeto: Gerenciador de corrida e competição</li>
+                <li>1 Projeto: La Ursa walk.</li>
+                <li>2 Projeto: Jogo inspirado em The Legend of Zelda na plataforma Unity.</li>
+                <li>3 Projeto: Gerenciador de corrida e competição.</li>
             </ul>
             <h2>Sobre o projeto 1 </h2>
-            <p>Foi realizado para a disciplina Projeto 1 da CESAR School e que o projeto do meu grupo basicamente consiste em varios artefatos espalhados pelo recife antigo que vai contar a historia do local, com o objetivo de aumentar o interesse na cultura local e o interessem atividade fisica, como o proprio nome diz utilizaremos ma La Ursa</p>
+            <p>Foi realizado para a disciplina Projeto 1 da CESAR School e que o projeto do meu grupo basicamente consiste em varios artefatos espalhados pelo recife antigo que vai contar a historia do local, com o objetivo de aumentar o interesse na cultura local e o interessem atividade fisica, como o proprio nome diz utilizaremos uma La Ursa.</p>
         </section>
     </main>
     <footer>
