--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
     <main>
         <section class="hero">
             <h2>Sobre Mim</h2>
-            <p>Meu nome é Davila, sou Tecnico em Desenvolvimento de Sistemas e estudante da <a href="https://www.cesar.school/">CESAR School</a>, antes de fazer o ensino tecnico eu queriao curso de engenharia mecatronica, mas como não tinha perto de onde eu morava acabei fazendo Desenvolvimento de Sistemas e simplismente me apaixonei pela area</p>
+            <p>Meu nome é Davila, sou Tecnico em Desenvolvimento de Sistemas e estudante da <a href="https://www.cesar.school/">CESAR School</a>, antes de fazer o ensino tecnico eu queria o curso de engenharia mecatronica, por pensar que mexeria exclusicamente com robos, mas como não tinha perto de onde eu morava acabei fazendo Desenvolvimento de Sistemas e simplesmente me apaixonei pela area</p>
             <h2>Interesses</h2>
             <ul>
                 <li>Inteligencia Artificial</li>
