--- a/projetos.html
+++ b/projetos.html
@@ -24,8 +24,12 @@
                 <li>2 Projeto: Jogo inspirado em The Legend of Zelda na plataforma Unity.</li>
                 <li>3 Projeto: Gerenciador de corrida e competição.</li>
             </ul>
-            <h2>Sobre o projeto 1 </h2>
+            <h2>Sobre o projeto 1.</h2>
             <p>Foi realizado para a disciplina Projeto 1 da CESAR School e que o projeto do meu grupo basicamente consiste em varios artefatos espalhados pelo recife antigo que vai contar a historia do local, com o objetivo de aumentar o interesse na cultura local e o interessem atividade fisica, como o proprio nome diz utilizaremos uma La Ursa.</p>
+            <h2>Sobre o projeto 2.</h2>
+            <p>Foi realizado durante o ensino medio, apesar de não ter nada de especial no desenvolvimento alem de ter sido minha primeira vez desenvolvendo algo "grande" e a primeira vez que desenvolvi algo com meus amigos e apesar de todos os problemas foi divertido, cada nova descoberta e novos desafios foram incriveis. Obs: o nome do jogo era Jorge no inicio do desenvolvimento.</p>
+            <h2>Sobre o projeto 3.</h2>
+            <p>Foi realizado durante a disciplina Fundamento de Programação, de forma resumida é um CRUD com manipulação de arquivos onde o "cliente" poderia gerir melhor seus treinos e competições.</p>
         </section>
     </main>
     <footer>
