--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Bem-vindo</h1>
-            <p>Estudante de Ciências da Computação e desenvolvedor em busca de oportunidades!</p>
-        </section>
+        <div class="centro">
+            <h1>Bem-vindo ao meu site</h1>
+            <p>Estudante de Ciências da Computação em busca de oportunidades!</p>
+            <img src="img.jpeg" alt="Davila, ou Menino da vila como chamam meus amigos, o verdinho se chama do e na verdade é o verdadeiro programador" style="width:600px;height:500px;">
+        </div>
         <div class="centro">
             <button id="mapa">Mostrar cidade onde cresci</button>
             <div id="map" style="height: 500px; width: 100%; display: none;"></div>
