--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="centro">
             <h1>Bem-vindo ao meu site</h1>
             <p>Estudante de Ciências da Computação em busca de oportunidades!</p>
-            <img src="img.jpeg" alt="Davila, ou Menino da vila como chamam meus amigos, o verdinho se chama do e na verdade é o verdadeiro programador" style="width:600px;height:500px;">
+            <img src="img.jpeg" alt="Davila, ou Menino da vila como chamam meus amigos, o verdinho se chama dom e na verdade é o verdadeiro programador" style="width:600px;height:500px;">
         </div>
         <div class="centro">
             <button id="mapa">Mostrar cidade onde cresci</button>
